# PAKEs-Conflux

./: .gitignore  Cargo.toml  README.md
aucpace/: CHANGELOG.md  Cargo.toml  README.md
aucpace/examples/: key_agreement.rs  key_agreement_no_std.rs  key_agreement_partial_aug.rs  key_agreement_strong.rs
aucpace/src/: client.rs  errors.rs  lib.rs  server.rs  utils.rs
aucpace/tests/: lookup_failed.rs  test_key_agreement.rs  test_key_agreement_partial_aug.rs  test_key_agreement_strong.rs  test_key_agreement_strong_partial_aug.rs
docs/: aucpace.md  secret-inventory.md  spake2.md  srp.md
secret-utils/: Cargo.toml  README.md
secret-utils/src/: lib.rs
spake2/: CHANGELOG.md  Cargo.toml  README.md
spake2/benches/: spake2.rs
spake2/src/: ed25519.rs  error.rs  group.rs  lib.rs
spake2/tests/: spake2.rs
srp/: CHANGELOG.md  Cargo.toml  README.md
srp/src/: client.rs  lib.rs  server.rs
srp/tests/: bad_public.rs  rfc5054.rs  srp.rs
