[package]
name = "aucpace-conflux"
version = "0.2.2"
authors = ["Gerard Cruzado <thatnewyorker@gmail.com>", "Sam Leonard <tritoke@protonmail.com>"]
description = "AuCPace protocol implementation"
documentation = "https://docs.rs/aucpace-conflux"
homepage = "https://github.com/thatnewyorker/PAKEs-Conflux/tree/master/aucpace"
repository = "https://github.com/thatnewyorker/PAKEs-Conflux"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "pake", "authentication"]
categories = ["cryptography", "authentication"]
exclude = [".gitignore"]
readme = "README.md"
edition = "2024"
rust-version = "1.89"

[lib]
name = "aucpace_conflux"

[dependencies]
curve25519-dalek = { version = "4.1.3", default-features = false, features = [
    "digest",
] }
password-hash = { version = "0.5.0", default-features = false, features = [
    "rand_core",
] }
rand_core = { version = "0.9.3", default-features = false }
rand = { version = "0.9.2", optional = true, features = ["os_rng"] }
serde = { version = "1.0.228", default-features = false, optional = true, features = [
    "derive",
] }
serde-byte-array = { version = "0.1.2", optional = true }
subtle = { version = "2.6.1", default-features = false }
scrypt = { version = "0.11.0", default-features = false, optional = true, features = [
    "simple",
] }
sha2 = { version = "0.10.9", default-features = false, optional = true }

zeroize = { version = "1.7", default-features = false, features = ["zeroize_derive"] }
secret-utils = { version = ">=0.2.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
bincode = "2"
curve25519-dalek = { version = "4.1.3", features = ["digest"] }
password-hash = { version = "0.5.0", features = ["rand_core"] }
postcard = "1.1.3"
rand_core = "0.9.3"
scrypt = { version = "0.11.0", features = ["simple"] }
sha2 = "0.10"

[features]
default = ["scrypt", "sha2", "getrandom", "zeroize"]
alloc = []
partial_augmentation = []
strong_aucpace = []
zeroize = ["curve25519-dalek/zeroize"]
serde = ["dep:serde", "serde-byte-array", "curve25519-dalek/serde"]
getrandom = ["dep:rand", "rand/os_rng"]


[[example]]
name = "key_agreement"
required-features = ["default", "alloc", "serde"]

[[example]]
name = "key_agreement_no_std"
required-features = ["default", "serde"]

[[example]]
name = "key_agreement_partial_aug"
required-features = ["default", "alloc", "serde", "partial_augmentation"]

[[example]]
name = "key_agreement_strong"
required-features = ["default", "alloc", "serde", "strong_aucpace"]
