[package]
name = "secret-utils"
version = "0.2.2"
description = "Shared utilities for secret handling (wrappers, zeroization, secrecy) used across the PAKEs-Conflux workspace"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thatnewyorker/PAKEs-Conflux"
edition = "2024"
rust-version = "1.89"

[lib]
name = "secret_utils"
path = "src/lib.rs"

[features]
# Default to alloc-enabled, no_std-friendly configuration.
default = ["alloc"]
alloc = []
# Convenience feature to opt into std if desired by dependents.
std = ["alloc"]

[dependencies]

# zeroize provides reliable in-memory erasure. Enable derive for convenience.
zeroize = { version = "1.7", default-features = false, features = ["zeroize_derive"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
