[package]
name = "spake2-conflux"
version = "0.4.0"
authors = ["Gerard Cruzado <thatnewyorker@gmail.com>", "Brian Warner <warner@lothar.com>"]
description = "The SPAKE2 password-authenticated key-exchange algorithm."
documentation = "https://docs.rs/spake2-conflux"
homepage = "https://github.com/thatnewyorker/PAKEs-Conflux/tree/master/spake2"
repository = "https://github.com/thatnewyorker/PAKEs-Conflux"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "pake", "authentication"]
categories = ["cryptography", "authentication"]
exclude = [".gitignore"]
readme = "README.md"
edition = "2024"
rust-version = "1.90"

[lib]
name = "spake2_conflux"


[dependencies]
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["digest"] }
rand_core = { version = "0.9", default-features = false }
rand = { version = "0.9", optional = true, features = ["os_rng"] }
sha2 = { version = "0.10", default-features = false }
hkdf = { version = "0.12", default-features = false }

[dev-dependencies]
bencher = "0.1"
hex = "0.4"
num-bigint = "0.4"

[features]
default = ["getrandom"]
getrandom = ["dep:rand", "rand/os_rng"]
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
