[package]
name = "srp-conflux"
version = "0.7.0-pre"
authors = ["Gerard Cruzado <thatnewyorker@gmail.com", "RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "Secure Remote Password (SRP) protocol implementation"
documentation = "https://docs.rs/srp-conflux"
repository = "https://github.com/thatnewyorker/PAKEs-Conflux"
keywords = ["crypto", "pake", "authentication"]
categories = ["cryptography", "authentication"]
readme = "README.md"
edition = "2024"
rust-version = "1.90"

[lib]
name = "srp_conflux"

[dependencies]
num-bigint = "0.4"
generic-array = "0.14"
digest = "0.10"
lazy_static = "1.2"
subtle = "2.4"
rand_chacha = "0.9"
rand_core = "0.9"


[dev-dependencies]
hex-literal = "0.4"
num-traits = "0.2"
rand = { version = "0.9", features = ["os_rng"] }
sha1 = "0.10"
sha2 = "0.10"
