[package]
name = "srp-conflux"
version = "0.7.2"
authors = ["Gerard Cruzado <thatnewyorker@gmail.com>", "RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "Secure Remote Password (SRP) protocol implementation"
documentation = "https://docs.rs/srp-conflux"
repository = "https://github.com/thatnewyorker/PAKEs-Conflux"
keywords = ["crypto", "pake", "authentication"]
categories = ["cryptography", "authentication"]
readme = "README.md"
edition = "2024"
rust-version = "1.89"

[lib]
name = "srp_conflux"

[dependencies]
num-bigint = "0.4.6"
generic-array = "1.2.0"
digest = "0.10.7"
lazy_static = "1.5"
subtle = "2.6.1"
rand_chacha = "0.9.0"
rand_core = "0.9.3"

zeroize = { version = "1.7", default-features = false, features = ["zeroize_derive"] }
secret-utils = { version = "0.2", default-features = false, features = ["alloc"] }


[dev-dependencies]
hex-literal = "1.0.0"
num-traits = "0.2.19"
rand = { version = "0.9.2", features = ["os_rng"] }
sha1 = "0.10.6"
sha2 = "0.10.9"
